backend/k8s/infra/mongodb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: infra
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7.0.5
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: init-script
          configMap:
            name: mongo-init-script
            items:
              - key: init.js
                path: init.js
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: infra
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
