backend/k8s/infra/postgresql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: infra
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-initdb-config
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: postgres-initdb-config
          configMap:
            name: postgres-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: infra
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
